# whisper

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main2.rs
