[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
hound = "3.5.0"
tokio = { version = "1.27.0", features = ["full"] }
webrtc-vad = "0.4.0"
whisper-rs = "0.5.0"
