[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
dasp = { version = "0.11.0", features = ["dasp_signal", "dasp_interpolate"] }
dasp_interpolate = "0.11.0"
dasp_signal = "0.11.0"
hound = "3.5.0"
rubato = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
webrtc-vad = "0.4.0"
whisper-rs = "0.5.0"
