[package]
name = "whisper-agent"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
rubato = "0.12.0"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", rev = "6e70e56" }
